--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "graphql-tag": "^2.12.6",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
+    "vue-daum-postcode": "^1.2.1",
     "vue-i18n": "9",
     "vue-router": "^4.0.0",
     "vuetify": "3.4.2",
