상영관 리스트 진행중
상영관 리스트 진행중

--- a/backend/api/poster/models/poster.settings.json
+++ b/backend/api/poster/models/poster.settings.json
@@ -65,6 +65,14 @@
         "r15",
         "r19"
       ]
+    },
+    "theater": {
+      "via": "posters",
+      "model": "theater"
+    },
+    "schedule": {
+      "via": "poster",
+      "model": "schedule"
     }
   }
 }
