영화 상세 페이지 작업중
- 좌석 배치도 작업 중(중간저장)

--- a/backend/api/schedule/models/schedule.settings.json
+++ b/backend/api/schedule/models/schedule.settings.json
@@ -40,6 +40,10 @@
     "poster": {
       "model": "poster",
       "via": "schedule"
+    },
+    "readytime": {
+      "default": 15,
+      "type": "integer"
     }
   }
 }
