티켓팅 진행중
티켓팅 진행중

--- a/backend/api/poster/models/poster.settings.json
+++ b/backend/api/poster/models/poster.settings.json
@@ -67,12 +67,12 @@
       ]
     },
     "theater": {
-      "via": "posters",
-      "model": "theater"
+      "model": "theater",
+      "via": "posters"
     },
-    "schedule": {
+    "schedules": {
       "via": "poster",
-      "model": "schedule"
+      "collection": "schedule"
     }
   }
 }
