--- a/backend/api/theater/models/theater.settings.json
+++ b/backend/api/theater/models/theater.settings.json
@@ -25,8 +25,8 @@
       "default": 15
     },
     "posters": {
-      "collection": "poster",
-      "via": "theater"
+      "via": "theater",
+      "collection": "poster"
     },
     "ratio": {
       "type": "string"
@@ -40,6 +40,9 @@
     "schedules": {
       "via": "theater",
       "collection": "schedule"
+    },
+    "date": {
+      "type": "date"
     }
   }
 }
