--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-daum-postcode": "^1.2.1",
+    "vue-horizontal-calendar": "^1.0.0",
     "vue-i18n": "9",
     "vue-router": "^4.0.0",
     "vue3-apexcharts": "^1.5.2",
