좌석 선택 진행중
좌석 선택 진행중

--- a/backend/api/poster/models/poster.settings.json
+++ b/backend/api/poster/models/poster.settings.json
@@ -67,8 +67,8 @@
       ]
     },
     "theater": {
-      "model": "theater",
-      "via": "posters"
+      "via": "posters",
+      "model": "theater"
     },
     "schedules": {
       "via": "poster",
