--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -82,6 +82,10 @@
     "replies": {
       "via": "user",
       "collection": "reply"
+    },
+    "ticketing": {
+      "via": "users_permissions_user",
+      "model": "ticketing"
     }
   }
 }
