결제 페이지 진행중
결제 페이지 진행중

--- a/backend/api/schedule/models/schedule.settings.json
+++ b/backend/api/schedule/models/schedule.settings.json
@@ -32,9 +32,9 @@
       "model": "poster",
       "via": "schedules"
     },
-    "ticketing": {
-      "model": "ticketing",
-      "via": "schedule"
+    "ticketings": {
+      "via": "schedule",
+      "collection": "ticketing"
     }
   }
 }
