--- a/backend/api/ticketing/models/ticketing.settings.json
+++ b/backend/api/ticketing/models/ticketing.settings.json
@@ -17,14 +17,17 @@
     "personnel": {
       "type": "integer"
     },
-    "schedule": {
-      "via": "ticketing",
-      "model": "schedule"
-    },
     "users_permissions_user": {
       "plugin": "users-permissions",
       "model": "user",
       "via": "ticketing"
+    },
+    "schedule": {
+      "model": "schedule",
+      "via": "ticketings"
+    },
+    "total": {
+      "type": "string"
     }
   }
 }
