결제 중 저장
결제 중 저장

--- a/backend/extensions/users-permissions/models/User.settings.json
+++ b/backend/extensions/users-permissions/models/User.settings.json
@@ -83,8 +83,12 @@
       "via": "user",
       "collection": "reply"
     },
+    "payments": {
+      "via": "user",
+      "collection": "payment"
+    },
     "ticketing": {
-      "via": "users_permissions_user",
+      "via": "user",
       "model": "ticketing"
     }
   }
