--- a/backend/api/ticketing/models/ticketing.settings.json
+++ b/backend/api/ticketing/models/ticketing.settings.json
@@ -17,7 +17,7 @@
     "personnel": {
       "type": "integer"
     },
-    "users_permissions_user": {
+    "user": {
       "plugin": "users-permissions",
       "model": "user",
       "via": "ticketing"
@@ -28,6 +28,10 @@
     },
     "total": {
       "type": "string"
+    },
+    "payment": {
+      "via": "ticketing",
+      "model": "payment"
     }
   }
 }
