결제 리스트 진행중
결제 리스트 진행중

--- a/backend/api/payment/models/payment.settings.json
+++ b/backend/api/payment/models/payment.settings.json
@@ -52,6 +52,9 @@
     },
     "buyer_poster_showtime": {
       "type": "string"
+    },
+    "buyer_poster_url": {
+      "type": "text"
     }
   }
 }
